fix: accounted for scan line shift on animation

--- a/src/App.css
+++ b/src/App.css
@@ -389,19 +389,19 @@
   0%,
   80%,
   100% {
-    transform: translateY(-10%);
+    transform: translateY(0);
     opacity: 0.8;
   }
   82% {
-    transform: translateY(-10%) translateX(-5px);
+    transform: translateY(0) translateX(-5px);
     opacity: 1;
   }
   84% {
-    transform: translateY(-10%) translateX(5px);
+    transform: translateY(0) translateX(5px);
     opacity: 0.6;
   }
   86% {
-    transform: translateY(-10%);
+    transform: translateY(0);
     opacity: 0.8;
   }
 }
